# capital-dashboard

./: .gitignore  README.md  README_EN.md  barchart_api.py  codex.md  docker-compose.yml  gemini.md  start-dev.bat  start-dev.ps1
.github/workflows/: build.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: db.py  main.py
backend/app/clients/: __init__.py
backend/app/core/: config.py
backend/app/models/: __init__.py  leveraged_etf.py  price.py
backend/app/schemas/: leveraged_etf.py  market.py
backend/app/services/: breadth.py  forward_pe.py  leveraged_etf.py  market_data.py  overnight_data.py  realtime.py  spy_rsp_ratio.py  time_ranges.py  yahoo_client.py
backend/app/utils/: cache.py
deploy/proxy/: nginx.conf
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: CustomAssetDashboard.vue  CustomHistogramChart.vue  CustomRelativeChart.vue  DataLoadingOverlay.vue  DrawdownChart.vue  FearGreedComparisonChart.vue  FullscreenModal.vue  LegendToggle.vue  LeveragedETFCalculator.vue  Mag7DailyBars.vue  Mag7HistogramPerformance.vue  Mag7RelativeChart.vue  MarketBreadthChart.vue  MarketHeader.vue  MarketStatsRow.vue  MultiAssetComparisonChart.vue  RelativeComparisonChart.vue  SectorComparisonChart.vue  SectorTable.vue  Sp500PriceVolumeChart.vue  SpForwardPeChart.vue  SpyRspRatioChart.vue  TimeRangeSelector.vue  TwoAssetHistogram.vue  WidgetLoading.vue
frontend/src/composables/: useFullscreen.ts  useLightweightChart.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
test/: bitcoin_circle.py  fetch_sp500_forward_pe.py  overnight_query2.py  query_ws.py  ratio.py  sp500-forward-pe-ratio.json  test_akshare.py  test_barchart_nvda.py  test_yfinance_index_change.py  test_yfinance_nvda_pe.py  test_yfquery.py
