[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capital-dashboard-backend"
version = "0.1.0"
description = "Market dashboard backend service"
authors = [{name = "Codex Agent", email = "codex@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.7",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
