[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capital-dashboard-backend"
version = "0.1.0"
description = "Market dashboard backend service"
authors = [{name = "Codex Agent", email = "codex@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.21",
    "pydantic>=2.9.2",
    "pandas>=2.2.3",
    "yfinance>=0.2.43",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools]
packages = ["app"]
